--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 max_line_length = 120
 
-[*.yml]
+[*.{yaml,yml}]
 indent_size = 2
 
 [*.{md,diff}]
