--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,9 @@ before_install:
   - export PATH=$HOME/.local/bin:$PATH
   - travis_retry curl -L https://get.haskellstack.org/stable/linux-x86_64.tar.gz | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
 
+cache:
+  directories:
+    - $HOME/.stack
+
 # run the tests through stack
 script: stack --no-terminal --skip-ghc-check test
