--- a/package.yaml
+++ b/package.yaml
@@ -20,6 +20,7 @@ description: Please see the README on GitHub at <https://github.com/jradtilbrook
 
 dependencies:
   - base >= 4.7 && < 5
+  - hlint
 
 library:
   source-dirs: src
