--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ cache:
   directories:
     - $HOME/.stack
 
-# lint files and run tests
+# build, lint and run tests
 script:
+  - stack build
   - stack exec hlint app src test
   - stack --no-terminal --skip-ghc-check test
 
